# phishingDetectionRenewed

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/bot/: cluster.rs  events_handling.rs  handling.rs  message_parser.rs  mod.rs  parser.rs  preparer.rs
src/bot/commands/: allow.rs  denied.rs  deny.rs  mod.rs
src/bot/utils/: interaction.rs  message.rs  mod.rs
src/rest/: mod.rs  safebrowsing.rs  sled.rs
