[package]
name = "discord_phishing"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twilight-command-parser = "0.7.0"
twilight-gateway = "0.7.1"
twilight-http = "0.7.1"
twilight-model = "0.7.1"
twilight-cache-inmemory = {version = "0.7.1", features = ["permission-calculator"]}
twilight-interactions = "0.7.1"

tokio = {version = "1", features = ["full"] }
futures = "0.3.17"
async-trait = "0.1.21"

linkify = "0.7.0"
url = "2.2.2"

serde = "1.0.129"
serde_json = "1.0.66"

reqwest = "0.11.4"
anyhow = "1.0.45"
sled = "0.34.7"
chrono = "0.4.19"